Fixing h# spacing

--- a/scss/clipboard.scss
+++ b/scss/clipboard.scss
@@ -69,13 +69,13 @@ h1,h2,h3,h4,h5,h6 {
 h1 {
 	font-size: 1.7em;
 	line-height: 1.33em;
-	margin-top: 1.11em;
+	padding-top: 1.11em;
 	margin-bottom: 1.11em;
 }
 h2 {
 	font-size: 1.33em;
 	line-height: 1.5em;
-	margin-top: 1.11em;
+	padding-top: 1.11em;
 	margin-bottom: 1.11em;
 }
 h1, h2 {
@@ -96,6 +96,10 @@ h4,h5{
 h6 {
 	font-size: 1.1em;
 	letter-spacing: 0.1em;
+}
+h3, h4, h5, h6 {
+    margin-top: 1.11em;
+    margin-bottom: 1.11em;
 }
 hr {
 	margin-top: 3em;
@@ -216,7 +220,8 @@ body {
 	padding-bottom: 100px;
 	box-sizing: border-box;
 }
-body>*::first-child{
+body>:first-child, 
+header :first-child {
     margin-top: 0;
 }
 footer {
